# SI_Project

./: .gitignore  README.md
Article/: GPU-accelerated genetic algorithm for Nash problem.md
Base_GA/: CMakeLists.txt  main.cpp
Base_GA/include/: GA_Deps.h  Genome.hpp  Individual.hpp
CS-179-Project-master/: genetic_algorithm_cuda.cuh
CUDA_Practice/.metadata/.plugins/org.eclipse.core.resources/: 0.snap
CUDA_Practice/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
CUDA_Practice/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
CUDA_Practice/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
CUDA_Practice/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.bili_0/: node.properties
CUDA_Practice/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.bili_0/FP.local.files_0/: node.properties
CUDA_Practice/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.bili_0/H.local_16/: node.properties
CUDA_Practice/Chapter02/02_memory_overview/01_sgemm/: CMakeCache.txt  CUDA_Practice.cbp  Makefile  cmake_install.cmake  sgemm  sgemm.cu
CUDA_Practice/Chapter03/03_cuda_thread_programming/03_threadsync_and_reduction/: CMakeLists.txt
Code/: CMakeLists.txt  Makefile  Simulate  main  main.cpp  multiobjective_optimization.hpp
Data/: Linear_cost.csv
Execute Script/: execuate.py
cuda-genetic-knapsack-master/: LICENSE  Makefile  README.md  dp.cpp  gen.cpp  knapsack.cpp  knapsack.cu  knapsack.h  main.cpp  rand1.in  rand2.in  rand3.in  rand4.in  rand5.in  rand6.in  utils.cpp  utils.h
